--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angularfire2": "^5.0.0-rc.5-next",
     "core-js": "^2.4.1",
+    "firebaseui": "^2.5.1",
+    "firebaseui-angular": "^2.5.2",
+    "promise-polyfill": "7.0.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
