--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "types": [
+      "core-js"
+    ],
     "lib": [
       "es2017",
       "dom"
